--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -2,8 +2,6 @@
 
 Here is a non-comprehensive, but hopefully informative guide to onboarding to the SWAMP Unit. The majority of this information in this section is aimed towards starting at SWAMP as a rank-and-file (non-supervisory) state employee. Please re-reference this page throughout your time at SWAMP!
 
-Also see the [New Employee Orientation Resources](https://waternet.waterboards.ca.gov/das/benefits/emp_orientation.shtml) & make a note of [state holidays](https://www.calhr.ca.gov/employees/pages/state-holidays.aspx) on your calendar.
-
 ## Initial Logistics
 
 In your first week, your supervisor will help you:
@@ -35,6 +33,7 @@ We recommend you take some time to:
         -   Git
         -   Zoom
 -   Familiarize yourself with Microsoft Teams, Outlook, any other software you may use (see the [Communication Section](https://cawaterboarddatacenter.github.io/swamp-manual/expectations.html#communication) for communication norms, resources, and expectations)
+-   Review the [New Employee Orientation Resources](https://waternet.waterboards.ca.gov/das/benefits/emp_orientation.shtml) & make a note of [state holidays](https://www.calhr.ca.gov/employees/pages/state-holidays.aspx) on your calendar
 -   Add any known / already approved time off to your calendar (see the [Work Schedule Section](https://cawaterboarddatacenter.github.io/swamp-manual/expectations.html#work-schedule) for guidance)
 -   Familiarize yourself with resources related to the project(s) you will be working on
 -   Meet others in SWAMP/OIMA and others that you'll work with on your project(s)
