add SWAMP co-working meetings

--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -12,6 +12,7 @@ In your first week, your supervisor will help you:
 -   Forward relevant meeting invitations and other information to you, such as:
     -   SWAMP Unit Meetings
     -   SWAMP Roundtable Meetings
+    -   Optional SWAMPside coworking Meetings
     -   OIMA All-Staff Meetings
     -   Other meetings that will be relevant to your work
 -   Get added to relevant email lists, such as:
