--- a/training.qmd
+++ b/training.qmd
@@ -2,20 +2,16 @@
 
 As a Water Boards employee, you have access to training and training-related services to support your personal and professional development, all in support of the Water Boards' mission. Training Services is comprised of the *Training Academy* and *Training Office*, which offer different types of training and which you access differently.
 
-::: callout-note
-Reminder to update when new training system is launched in Jul 2023
-:::
-
 ***Water Board Training Academy***
 
 -   Offers in-house virtual and in-person training courses
--   Staff self-register for courses via the [Academy Registration System (GSMU)](https://waterboards.gosignmeup.com/ "https://waterboards.gosignmeup.com/")​​​​​​​ - follow [these instructions on how to attend Academy courses](https://cawaterboards.sharepoint.com/Training/SitePages/Access-Trainings-and-Conferences.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Access-Trainings-and-Conferences.aspx")
+-   Staff self-register for courses via the Cornerstone Learning Management System - see the [Cornerstone Introductory Modules](https://cawaterboards.sharepoint.com/Training/SitePages/Cornerstone-Introductory-Modules.aspx) and/or the [Cornerstone Training Recording](https://cawaterboards.sharepoint.com/:v:/r/Training/Documents/Training%20Corner%20Newsletters/Cornerstone%20Training%20Video.mp4?csf=1&web=1&e=YtjuDO) to get started
 -   Works with staff to develop new classes
 
 ***Water Boards Training Office***
 
--   Gives ​​​​​​access to external events (trainings, conferences, PE/PG license preparation classes and higher education requests)
--   Always submit a TRF to your [Training Liaison](https://cawaterboards.sharepoint.com/Training/SitePages/Training-Liaisons.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Training-Liaisons.aspx") - follow [these instructions on how to attend external events](https://cawaterboards.sharepoint.com/Training/SitePages/Access-Trainings-and-Conferences.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Access-Trainings-and-Conferences.aspx")
+-   Gives ​​​​​​access to external events (training, conferences, PE/PG license preparation classes and higher education requests - essentailly, anything *not* found in the Cornerstone system)
+-   Processes for requesting to attend an external training event or conference differ - see the [Access External Training and Conferences SharePoint](https://cawaterboards.sharepoint.com/Training/SitePages/Access-External-Training-and-Conferences.aspx) for guidance and forms
 -   **Never** pay for a class yourself, without explicit pre-approval from the Training Office (or you won't be eligible for reimbursement)
 
 ## Internal Training
@@ -24,16 +20,13 @@ Internal Training refers to in-house training courses supported by the *Water Bo
 
 **How to sign up for Internal Water Board Training Academy Courses:**
 
--   Watch your inbox for course announcement emails 
--   Search the [Academy Registration System](https://waterboards.gosignmeup.com/Public) 
--   Explore the FY 22/23 Academy Course Catalog ([Excel](https://cawaterboards.sharepoint.com/Training/Documents/academycatalogexcel.xlsx)) ([PDF](https://cawaterboards.sharepoint.com/Training/Documents/academycatalogpdf.pdf)) 
+-   Watch your inbox for course announcement emails or visit the [Training Services SharePoint](https://cawaterboards.sharepoint.com/Training/SitePages/Home.aspx)
+-   Search Cornerstone (via your Miscrosoft Apps) for on-demand resources and upcoming training opportunities
 
 **Approval Process:**
 
--   Self-register on the [Academy Registration System](https://waterboards.gosignmeup.com/Public "https://waterboards.gosignmeup.com/Public")
--   Download the current [TRF](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx")
--   Fill out the TRF​ and obtain management approvals (digital signature)
--   Email completed TRF to your **Training Liaison (please do not email to the Training Office)**
+-   Get supervisor approval to take training(s)
+-   Self-register on Cornerstone
 
 **Attendance Reminder:**
 
@@ -51,51 +44,43 @@ External Training refers to external events (training, conferences, PE/PG licens
 
 **How to sign up for (non-Academy) External Training:**
 
--   Download the current [TRF](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx")​
--   Fill out the TRF and obtain approvals (digital signature)
--   Email completed TRF to your Training Liaison
+-   Visit the [Training Services SharePoint](https://cawaterboards.sharepoint.com/Training/SitePages/Home.aspx) to:
+    -   Review how to [Access External Training and Conferences](https://cawaterboards.sharepoint.com/Training/SitePages/Access-External-Training-and-Conferences.aspx)
+    -   Download the current [Training Request Form](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx) (TRF)
+-   Fill out the TRF and obtain supervisor approval (digital signature)​
+-   Email signed TRF to your Training Liaison
 -   Training Liaison submits TRF to Training Office for processing, by submission deadline
--   Training Office emails you the approved TRF when registration is complete
+-   Training Office emails you the approved forms when registration is complete
 
 **How to sign up for (non-Academy) Conferences:**
 
--   Be prepared to plan head when requesting to attend any Conference or External Training. Visit the [FY 22/23 Training Submittal Deadlines](https://cawaterboards.sharepoint.com/Training/Documents/TRF%20Acceptance%20and%20Deadlines.pdf) to begin planning your request. The current submission deadline for Conferences is **35 business days prior to the registration deadline.**
--   Download the current [TRF](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx")​ and [Conference Package](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx "https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx")​​
--   Fill out the TRF and Conference Package and obtain approvals (digital signature)​
--   Attach copy of registration form, event agenda, meal or session preferences (if applicable), etc.​
--   Email completed TRF and Conference Package to your Training Liaison
+-   Be prepared to plan head when requesting to attend any Conference or External Training.
+-   Visit the [Training Services SharePoint](https://cawaterboards.sharepoint.com/Training/SitePages/Home.aspx) to:
+    -   Review how to [Access External Training and Conferences](https://cawaterboards.sharepoint.com/Training/SitePages/Access-External-Training-and-Conferences.aspx)
+    -   Review the Fiscal Year's Conference submittal deadlines. The current submission deadline for Conferences is **35 business days prior to the registration deadline.**
+    -   Download the current [TRF & In-State Travel Form](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx)
+-   Fill out the TRF and In-State Travel Form and obtain supervisor approvals (digital signature)​
+    -   Attach copy of registration form, event agenda, meal or session preferences (if applicable), etc.​
+-   Email signed forms and attachments (if applicable) to your Training Liaison
 -   Training Liaison submits them to Training Services for processing
--   Training Services emails you the approved TRF when approval is received
+-   Once your request is fully approved, Training Services will either process registration on your behalf and inform you of your approval or will send you authorization to self-register and seek reimbursement.
 
 See the [Professional Development Section](https://cawaterboarddatacenter.github.io/swamp-manual/development.html) for a list of conferences that may be of interest.
 
 ## Resources
 
--   [Training Forms](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx) 
 -   [Water Board's Training Services Page (SharePoint)](https://cawaterboards.sharepoint.com/Training/SitePages/Home.aspx) 
-
-<!-- -->
-
 -   [Training FAQ's](https://cawaterboards.sharepoint.com/Training/SitePages/FAQ.aspx) 
-
-<!-- -->
-
--   [Training Services Registration Guidelines](https://cawaterboards.sharepoint.com/Training/SitePages/Training-Services-Registration-Guidelines.aspx#training-services-registration-guidelines) (Visit if you're unsure of the training type you're wanting to attend) 
-
--   [FY 22/23 Training Submittal Deadlines](https://cawaterboards.sharepoint.com/Training/Documents/TRF%20Acceptance%20and%20Deadlines.pdf) 
+-   [Training Forms](https://cawaterboards.sharepoint.com/Training/SitePages/Forms.aspx) 
+-   [Training Services Registration Guidelines](https://cawaterboards.sharepoint.com/Training/SitePages/Training-Services-Registration-Guidelines.aspx#training-services-registration-guidelines) (Visit if you're unsure of the training type you're wanting to attend)
 
 ## Recommended On-demand Training Resources:
 
+-   Cornerstone on-demand resources
 -   [College of Water Informatics (CoWI) Data Tool Kit](https://www.waterboards.ca.gov/resources/oima/cowi/data_training.html) 
-
-<!-- -->
-
 -   [Tribal Historical and Legal Foundations](https://waternet.waterboards.ca.gov/training/videos/tribal_training1.mp4)
-
 -   [Tribal Cultural Resources](https://waternet.waterboards.ca.gov/training/videos/tribal_training2.mp4)
-
 -   [Tribal Cultural Awareness and California Native American History](https://www.youtube.com/watch?v=PttFI1WvTTY)
-
 -   [CA Water Quality Law 101](https://waternet.waterboards.ca.gov/wndata/videos/wq_law_101/wqlaw.mp4): foundational training in CA law including Porter Cologne Water Quality Control Act, Federal Clean Water Act, Basin Plans, etc.  
 
 ## **Contacts**
