--- a/training.qmd
+++ b/training.qmd
@@ -6,6 +6,7 @@ As a Water Boards employee, you have access to training and training-related ser
 
 -   Offers in-house virtual and in-person training courses
 -   Staff self-register for courses via the Cornerstone Learning Management System - see the [Cornerstone Introductory Modules](https://cawaterboards.sharepoint.com/Training/SitePages/Cornerstone-Introductory-Modules.aspx) and/or the [Cornerstone Training Recording](https://cawaterboards.sharepoint.com/:v:/r/Training/Documents/Training%20Corner%20Newsletters/Cornerstone%20Training%20Video.mp4?csf=1&web=1&e=YtjuDO) to get started
+    -   Note that Cornerstone accounts for new employees can be delayed, but are automatically created each night. It's recommended that new employees check daily to see if you are established and contract Training services if you experience a significant delay.
 -   Works with staff to develop new classes
 
 ***Water Boards Training Office***
