add Review & sign paperwork section - for fellows

--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -9,6 +9,15 @@ In your first week, your supervisor will help you:
 -   Get access to your Water Boards email
 -   Get any equipment or supplies you need (e.g. laptop, office supplies)
 -   Get a badge to enter the CalEPA building (as appropriate)
+-   Review & sign paperwork
+    -   CivicSpark or SeaGrant Fellows will need to have the following compiled & signed
+        -   Project Description (the one submitted with the original host application)
+        -   STD 689-Oath of Allegiance
+        -   Emergency Notification Request form
+        -   Internet/Intranet Policy Certificate
+        -   Welcome Letter
+        -   Letter of Agreement
+        -   Duty Statement
 -   Forward relevant meeting invitations and other information to you, such as:
     -   SWAMP Unit Meetings
     -   SWAMP Roundtable Meetings
