Add link to Travel Pocket Guide

--- a/travel.qmd
+++ b/travel.qmd
@@ -4,6 +4,8 @@ Exempt, excluded, and represented state employees may be eligible for the reimbu
 
 ## Quick links
 
+-   [Travel Pocket Guide (Intranet)](https://waternet.waterboards.ca.gov/das/accounting/docs/2023/travel-pocket-guide-september-2023.pdf) - can only access on VPN 
+
 -   [CalTravelStore / Concur](http://www.caltravelstore.com/) (where you book your travel)
 
 -   [CalATERS Global](https://www.sco.ca.gov/calaters_global.html) (where you submit your travel expense claims \[TEC\] for reimbursement)
