--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -10,7 +10,7 @@ In your first week, your supervisor will help you:
 -   Get any equipment or supplies you need (e.g. laptop, office supplies)
 -   Get a badge to enter the CalEPA building (as appropriate)
 -   Review & sign paperwork
-    -   CivicSpark or SeaGrant Fellows will need to have the following compiled & signed
+    -   **Fellows & Interns** will need to have the following compiled & signed
         -   Project Description (the one submitted with the original host application)
         -   STD 689-Oath of Allegiance
         -   Emergency Notification Request form
@@ -80,11 +80,9 @@ Important FAQ for leave types:
 
 -   Leave accrual can be impacted by the number of days/hours you work in a month.
 
-::: callout-tip
-## Need additional leave?
+**Need additional leave?**
 
 Under the [Voluntary Personal Leave Program](https://hrmanual.calhr.ca.gov/Home/ManualItem/1/2114), you can exchange a percentage of your salary to accrue additional leave hours per month. See the link above for more information, and contact our personnel specialist for more details.
-:::
 
 ## CalPERS
 
@@ -109,9 +107,11 @@ To learn more about the health coverage available to you, please visit the CalPE
 
 ### Retirement benefits
 
+Learn more about your CalPERS retirement benefits on their [website](https://www.calpers.ca.gov/page/life-events/retirement), which includes retirement planning checklists, calculators, classes, and explanations of benefits.
+
 ## Timesheets & Pay
 
-Staff should complete and submit their timesheets by the 25th of each month. Direct deposit typically hits the last day of the pay period (end of the month), potentially earlier if you use a credit union like Golden 1.
+Staff should complete and submit their timesheets by the 25th of each month. Direct deposit typically hits the last day of the pay period (end of the month), potentially earlier if you use a credit union.
 
 It typically takes \~1 month for new staff to be entered in the electronic timesheet system (BizFlow), so the first timesheet is done by filling out an excel template.
 
@@ -136,22 +136,48 @@ Leave balances are included on your paystubs and can be tracked in Cal Employee 
 
 ## Office-centered and Remote-centered Work
 
-All staff are required to fill out a work week agreement and telework plan that specifies where you will typically work on a given day of the week (office or remote) and your typical work hours. These plans must be completed even if the employee works in the office full time.
+The [Telework Policy](https://waternet.waterboards.ca.gov/das/human_resources/docs/CalEPA-and-BDO-telework-policy.pdf) for CalEPA and the Water Boards allows remote-centered work options for all staff as long as business needs can be met.
 
-Your typical work schedule (Work Week Agreement) and Telework Plan need to be created in BizFlow within 2 months of starting work.
+All staff are required to fill out a Work Week Agreement and Telework Agreement that specifies where you will typically work on a given day of the week (office or remote) and your typical work hours. All employees (including Student Assistants, Retired Annuitants, Supervisors and Managers) are required to complete both agreements, regardless of their telework or work week status.
 
-The Telework Policy for CalEPA and the Water Boards allows remote-centered work options for all staff as long as business needs can be met. As of January 2023, OIMA still maintains enough office space that staff will be assigned a cubicle or personal workstation in the CalEPA building whether or not they primarily work remotely.
+Your Work Week Agreement and Telework Agreement need to be created in BizFlow within 2 months of starting work. All Telework Agreements and Work Week Agreements must be reviewed and updated on an annual basis each calendar year in January.
 
-### Bizflow: Telework Agreement
+As of January 2023, OIMA still maintains enough office space that staff will be assigned a cubicle or personal workstation in the CalEPA building whether or not they primarily work remotely.
 
-**Logging in**: To [login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7) you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building). Use your workstation username (waterboards email address) and password to login.
+### Work Week Agreements 
 
-### Bizflow: Work Week Agreement
+Below are the approved work schedules.
 
-**Logging in**: To [login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7) you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building). Use your workstation username (waterboards email address) and password to login.
+-   **Regular/Standard or Fixed Work Schedules** - In accordance with Government Code 19851 a regular work schedule is defined as five (5) days a week, eight (8) hours a day and not more than 40 hours a week. If you are on a regular work schedule, please complete the agreement with a work schedule that reflects this.
 
-### Telework Equipment
+-   **Alternate Work Schedules (AWS)** have been released, therefore, please review the applicable AWS before recertifying your AWS agreement. Please note, your AWS agreement must match the CalHR AWS otherwise it will be rejected. Also see: [Calendars for Alternate Work Week Schedules](https://www.calhr.ca.gov/Pages/publications-awws-calendars.aspx)
+
+-   **Flex Schedule**, in accordance with CalHR policy, Flex Schedule is defined as "An arrangement that permits employees to flex or adjust their start and end times, so long as the employee has worked his/her scheduled number of hours per day." Therefore, you must have either an Alternate Work Schedule or a Regular Work schedule regardless of whether you have a Flex Schedule. At no time may a Flex Schedule result in overtime hours worked.
+
+-   **Exempt employees** on other than a Regular/Standard or Fixed Work schedule (e.g., AWS, Flex time), please refer to the [CalHR Human Resources Manual](https://hrmanual.calhr.ca.gov/Home/ManualItem/1/1501).
+
+### Telework Agreement
+
+Make sure you review all sections of the Telework Agreement prior to submitting it (e.g., alternate work location, telework day(s), etc.).
+
+If you are NOT teleworking or not eligible to telework, you still need to perform an annual review of your agreement and recertify that you are not teleworking.
+
+### Bizflow Process
+
+1.  Log in to Bizflow:
+2.  Select "Self-Service" then "Work Items" and "Employee Self-Service Work List"
+3.  Select the Agreement by clicking on the word "Review" (blue link)
+4.  Your form will contain information from the previous year. Make any necessary changes.
+5.  Check all the acknowledgment boxes on both forms.
+6.  Select the appropriate approvers. If you are unsure who your approvers are, please check with your Supervisor.
+7.  From the drop-down menu at the top left, choose "Submit Request" then click the green check box button.
+
+For more information, visit the [Telework Program Page](https://waternet.waterboards.ca.gov/das/human_resources/telework.shtml).
+
+### Equipment
 
 All staff are assigned a laptop (typically Dell or HP) that they can use at home and the office. The Water Boards only uses PCs and does not generally support any Mac-based hardware. Office workstations are set up with two wide screen monitors, keyboard, mouse and docking station where you plug in your laptop.
 
-Equipment available to take home includes: laptop, laptop bag, standard monitor, keyboard, mouse, headset, adjustable monitor stand, adjustable tilting laptop stand. To request additional equipment or to report issues with any of your equipment, send an email to the [IT Help Desk](mailto:help@waterboards.ca.gov). This will log a ticket in their tracking system and they will respond typically the same day. Ergonomic equipment may be made available through a [Reasonable Accommodation Request](https://waternet.waterboards.ca.gov/eeo/reasonable/index.shtml) (intranet link requires VPN login). Work with your supervisor for guidance on preparing the request.
+If you find you need different or additional equipment at your office or home desk (e.g., to make your workspace more ergonomic with a wireless keyboard or mouse), please speak to your supervisor who can work with you and IT to make the appropriate requests. Ergonomic equipment may be made available through a [Reasonable Accommodation Request](https://waternet.waterboards.ca.gov/eeo/reasonable/index.shtml) (intranet link requires VPN login). Work with your supervisor for guidance on preparing the request.
+
+Equipment available to take home includes: laptop, laptop bag, standard monitor, keyboard, mouse, headset, adjustable monitor stand, adjustable tilting laptop stand. To request additional equipment or to report issues with any of your equipment, send an email to the [IT Help Desk](mailto:help@waterboards.ca.gov). This will log a ticket in their tracking system and they will respond typically the same day.
